<resources>
    <string name="app_name">昭杏浏览器</string>
    <string name="browser_name">ZXbrowser</string>
    <string name="enter">进入</string>
    <string name="search">搜索</string>
    <string name="refresh">刷新</string>
    <string name="input_key_work">输入网址或关键字</string>
    <string name="pl_input_key_work">请输入网址或关键字</string>
    <string name="menu_add_collect">添加收藏</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_history">历史</string>
    <string name="menu_download">下载</string>
    <string name="menu_clean">清除数据</string>
    <string name="menu_exit">退出</string>
    <string name="clean">清除</string>
    <string name="q_clean_all">确定删除所有记录吗?</string>
    <string name="clean_all">全部清空</string>
    <string name="q_clean_collect">确定删除所有收藏吗?</string>
    <string name="q_download">下载文件:\n%s</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="delete">删除</string>
    <string name="download_exit">下载已存在</string>
    <string name="downloading">开始下载..</string>
    <string name="q_delete_down">删除所选下载项？</string>
    <string name="q_delete_all_down">删除所有下载项？</string>
    <string name="delete_file">同时删除源文件</string>
    <string name="q_clean_record">清除所有搜索记录，浏览记录，下载记录？</string>
    <string name="clean_succeed">清除成功</string>
    <string name="paused">已暂停</string>
    <string name="add">添加</string>
</resources>
