<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        tools:text="@string/q_delete_all_down"
        android:textColor="@color/text_black"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/no_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no"
            android:textSize="17sp"
            android:padding="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/text_black"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/line_gray"/>

        <TextView
            android:id="@+id/yes_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/yes"
            android:textSize="17sp"
            android:padding="5dp"
            android:textColor="@color/red"/>

    </LinearLayout>

</LinearLayout>